--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -1,3 +1,6 @@
-body{
-  background-color: green;
+:root {
+  background-image: url("https://wallpaperscraft.com/image/aurora_macro_purple_abstract_flower_76315_3840x2160.jpg");
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  font: 1em sans-serif;
 }
