--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,8 +37,15 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+button:active {
+  position: relative;
+  top: -2px;
+  left: -2px;
+}
 
+.allenModeOn{
+  color: green;
+  text-shadow: 0px 0px 1px green;
 }
 
 
