--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,8 +88,8 @@ a:hover {
   background: #272562;
   border-radius: 10px 0 0 10px;
   color: #48449E;
-  max-width: 250px;
-  min-width: 150px;
+  max-width: 200px;
+  min-width: 200px;
   flex-grow: 0.25;
   box-shadow: 5px 1px 10px rgba(0,0,0,0.2);
   z-index: 1;
@@ -264,19 +264,25 @@ a:hover {
 .create-hook {
   display: inline-block;
   margin: 0 10px;
-  padding: 0 4px;
-  transform: scale(1.5);
-  -webkit-transform: scale(1.5);
-  transition: color 0.5s ease,
-              scale 0.2s ease;
-  -webkit-transition: color 0.5s ease,
-              scale 0.2s ease;
+  font-size: 22px;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
 }
 
-.create-hook:hover {
+.create-hook a {
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+}
+
+.create-hook:hover a{
   transform: scale(1.8);
   -webkit-transform: scale(1.8);
   color: white;
+}
+
+.collapse.create-hook {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 .create-hook a:hover {
@@ -346,3 +352,66 @@ a:hover {
     height: 5em;
   }
 }
+
+/*
+ * Event Settings
+ */
+.events-form {
+  color: #4D4E99;
+  display: flex;
+  box-sizing: border-box;
+  flex-flow: row wrap;
+  align-content: space-between;
+  justify-content: space-between;
+  align-items: space-between;
+}
+
+.events-form input {
+  margin: 10px 0;
+}
+.events-form {
+  color: #4D4E99;
+  font-size: 14px;
+}
+
+.events-form .submit-button {
+  background-color: rgba(0,0,0,0);
+  border: 2px solid #4D4E99;
+  border-radius: 3px;
+}
+
+.events-form .submit-button:hover {
+  background-color: #4D4E99;
+  color: #272562;
+  border: 2px solid #4D4E99;
+  border-radius: 3px;
+}
+
+.submit-button:focus {
+  outline: none;
+}
+
+.events-form input[type="checkbox"] {
+  margin: 0px 5px;
+}
+
+/*
+.events-form input[type="checkbox"]{
+  display: none;
+}
+
+.events-form label:before {
+  border: 2px solid #4D4E99;
+  border-radius: 0;
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+}
+
+.events-form input[type=checkbox]:checked + label:before {
+  background-color: #4D4E99;
+  text-align: center;
+}
+*/
